--- a/Batocera Linux/emulationstation2.po
+++ b/Batocera Linux/emulationstation2.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: emulationstation\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-04-04 15:13+0200\n"
+"PO-Revision-Date: 2025-06-23 07:13+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv_SE\n"
@@ -507,6 +507,9 @@ msgstr "SYSTEM"
 msgid "VIDEO DRIVER"
 msgstr "GRAFIKDRIVRUTIN"
 
+msgid "SEOUL"
+msgstr "SEOUL"
+
 msgid "NETPLAY SETTINGS"
 msgstr "INSTÄLLNINGAR FÖR NETPLAY"
 
@@ -524,30 +527,6 @@ msgstr "ALTERNATIV"
 
 msgid "PORT"
 msgstr "PORT"
-
-msgid "USE RELAY SERVER"
-msgstr "ANVÄND RELÄSERVER"
-
-msgid "NONE"
-msgstr "INGEN"
-
-msgid "NEW YORK"
-msgstr "NEW YORK"
-
-msgid "MADRID"
-msgstr "MADRID"
-
-msgid "MONTREAL"
-msgstr "MONTREAL"
-
-msgid "SAO PAULO"
-msgstr "SAO PAULO"
-
-msgid "CUSTOM"
-msgstr "ANPASSAD"
-
-msgid "CUSTOM RELAY SERVER"
-msgstr "ANPASSAD RELÄSERVER"
 
 msgid "AUTOMATICALLY CREATE LOBBY"
 msgstr "SKAPA LOBBY AUTOMATISKT"
@@ -575,6 +554,30 @@ msgstr "INDEXERA NYA SPEL VID UPPSTART"
 
 msgid "INDEX GAMES"
 msgstr "INDEXERA SPEL"
+
+msgid "USE RELAY SERVER"
+msgstr "ANVÄND RELÄSERVER"
+
+msgid "NONE"
+msgstr "INGEN"
+
+msgid "NEW YORK"
+msgstr "NEW YORK"
+
+msgid "MADRID"
+msgstr "MADRID"
+
+msgid "MONTREAL"
+msgstr "MONTREAL"
+
+msgid "SAO PAULO"
+msgstr "SAO PAULO"
+
+msgid "CUSTOM"
+msgstr "ANPASSAD"
+
+msgid "CUSTOM RELAY SERVER"
+msgstr "ANPASSAD RELÄSERVER"
 
 msgid "INPUT"
 msgstr "INPUT"
@@ -1026,9 +1029,6 @@ msgstr "DENNA FUNKTION ÄR INAKTIVERAD MEDAN SKRAPNING PÅGÅR"
 msgid "CHOOSE"
 msgstr "NAVIGERA"
 
-msgid "THE USER INTERFACE MODE IS NOW UNLOCKED"
-msgstr "ANVÄNDARGRÄNSNITTSLÄGET ÄR NU OLÅST"
-
 msgid "ENTER THE CODE NOW TO UNLOCK"
 msgstr "SKRIV IN KODEN FÖR ATT LÅSA UPP"
 
@@ -1217,7 +1217,7 @@ msgid "THEME FONT SCALE"
 msgstr "TYPSNITTSSKALA FÖR TEMA"
 
 msgid "FULL SCREEN MENUS"
-msgstr "FULLSKÄRMSMENYER"
+msgstr "HELSKÄRMSMENYER"
 
 msgid "FORCE SMALL SCREEN THEMING"
 msgstr "TVINGA TEMA FÖR LITEN SKÄRM"
@@ -1957,6 +1957,12 @@ msgstr "SPELA SYSTEMSPECIFIK MUSIK"
 msgid "LOWER MUSIC WHEN PLAYING VIDEO"
 msgstr "SÄNK MUSIKEN MEDAN VIDEO SPELAS"
 
+msgid "PLAY ONLY SONGS FROM YOUR FAVORITES PLAYLIST"
+msgstr "SPELA ENDAST LÅTAR FRÅN DIN FAVORITSPELLISTA"
+
+msgid "SELECTION OF FAVORITE SONGS"
+msgstr "VAL AV FAVORITLÅTAR"
+
 msgid "SOUNDS"
 msgstr "LJUD"
 
@@ -2004,6 +2010,12 @@ msgstr "HOPPA TILL NÄSTA LÅT"
 
 msgid "NOW PLAYING"
 msgstr "SPELAS NU"
+
+msgid "REMOVE CURRENT SONG FROM THE FAVORITES PLAYLIST"
+msgstr "TA BORT AKTUELL LÅT FRÅN FAVORITSPELLISTAN"
+
+msgid "SAVE CURRENT SONG TO THE FAVORITES PLAYLIST"
+msgstr "SPARA AKTUELL LÅT TILL FAVORITSPELLISTAN"
 
 msgid "LAUNCH SCREENSAVER"
 msgstr "STARTA SKÄRMSLÄCKARE"
@@ -2283,6 +2295,9 @@ msgstr "BOXKÄLLA"
 msgid "LOGO SOURCE"
 msgstr "LOGOTYPKÄLLA"
 
+msgid "HD WHEEL"
+msgstr "HD WHEEL"
+
 msgid "WHEEL"
 msgstr "HJUL"
 
@@ -2550,6 +2565,9 @@ msgid ""
 msgstr ""
 "VISSA FILER SOM DU HAR LÄNKAT FINNS UTANFÖR SPELLISTANS SÖKVÄG.\n"
 "VILL DU ANVÄNDA EN KOPIA AV DESSA FILER RELATIVT TILL SPELLISTAN?"
+
+msgid "FAVORITE SONGS"
+msgstr "FAVORITLÅTAR"
 
 msgid "CONNECT TO NETPLAY"
 msgstr "ANSLUT TILL NETPLAY"
@@ -3574,6 +3592,9 @@ msgid ""
 msgstr ""
 "KALIBRERAR PISTOL\n"
 "Skjut på mål för att kalibera"
+
+#~ msgid "THE USER INTERFACE MODE IS NOW UNLOCKED"
+#~ msgstr "ANVÄNDARGRÄNSNITTSLÄGET ÄR NU OLÅST"
 
 #~ msgid "MATRIX"
 #~ msgstr "MATRIS"
