--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-06-11 11:51+0000\n"
-"PO-Revision-Date: 2025-06-22 18:49+0200\n"
+"PO-Revision-Date: 2025-06-23 08:10+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -21662,7 +21662,7 @@ msgstr "<b>Inga slingor</b> att kombinera i urvalet."
 
 #: ../src/path-chemistry.cpp:209
 msgid "Select <b>path(s)</b> to break apart."
-msgstr "Välj <b>slingor</b> för att bryta upp."
+msgstr "Välj <b>slingor</b> för att ta isär."
 
 #: ../src/path-chemistry.cpp:214
 msgid "Breaking apart paths..."
@@ -21674,7 +21674,7 @@ msgstr "Bryt isär"
 
 #: ../src/path-chemistry.cpp:296
 msgid "<b>No path(s)</b> to break apart in the selection."
-msgstr "<b>Inga slingor</b> att bryta upp i urvalet."
+msgstr "<b>Inga slingor</b> att ta isär i markeringen."
 
 #: ../src/path-chemistry.cpp:304
 msgid "Select <b>object(s)</b> to convert to path."
@@ -30355,8 +30355,8 @@ msgid ""
 "The following path operations will unlink clones: Stroke to path, Object to "
 "path, Boolean operations, Combine, Break apart"
 msgstr ""
-"Följande banoperationer kommer att avlänka kloner: Stryk till slinga, Objekt "
-"till slinga, Booleska operationer, Kombinera, Bryt isär"
+"Följande slingoperationer kommer att avlänka kloner: Streck till slinga, "
+"Objekt till slinga, Booleska operationer, Kombinera, Bryt isär"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2771
 msgid "'Object to Path' only unlinks (keeps LPEs, shapes)"
@@ -40999,7 +40999,7 @@ msgstr "Sa_mmanfoga"
 
 #: ../share/ui/menus.ui:1012
 msgid "Break _Apart"
-msgstr "Dela upp"
+msgstr "Ta _isär"
 
 #: ../share/ui/menus.ui:1018
 msgid "Split Pat_h"
