--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-06-11 11:51+0000\n"
-"PO-Revision-Date: 2025-06-24 21:30+0200\n"
+"PO-Revision-Date: 2025-06-25 06:46+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -40541,11 +40541,11 @@ msgstr "_Arkiv"
 
 #: ../share/ui/menus.ui:9
 msgid "_New"
-msgstr "_Ny"
+msgstr "_Nytt"
 
 #: ../share/ui/menus.ui:14
 msgid "New from _Template..."
-msgstr "Ny från _ mall..."
+msgstr "Nytt från _ mall..."
 
 #: ../share/ui/menus.ui:19
 msgid "_Open..."
@@ -42676,7 +42676,7 @@ msgstr ""
 
 #: ../share/extensions/dxf_input.py:1400
 msgid "Binary DXF file has unexpected header."
-msgstr "Binär DXF-fil har oväntat huvud."
+msgstr "Binär DXF-fil har oväntad header."
 
 #: ../share/extensions/dxf_input.py:1699
 msgid ""
