--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-06-11 11:51+0000\n"
-"PO-Revision-Date: 2025-06-26 07:08+0200\n"
+"PO-Revision-Date: 2025-06-26 07:09+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -48476,7 +48476,7 @@ msgstr ""
 "\n"
 "Insticksprogram för Gcodetools:\n"
 "Konverterar slingor till Gcode (med hjälp av cirkulär interpolation), gör "
-"förskjutningsbanor och graverar skarpa hörn med hjälp av koniska fräsar. "
+"förskjutningsslingor och graverar skarpa hörn med hjälp av koniska fräsar. "
 "Detta instick beräknar Gcode för slingor med hjälp av cirkulär interpolation "
 "eller linjär rörelse när det behövs.\n"
 "\n"
