--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-06-11 11:51+0000\n"
-"PO-Revision-Date: 2025-06-26 07:09+0200\n"
+"PO-Revision-Date: 2025-06-26 07:38+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -42,7 +42,7 @@ msgstr "Snabb beskärning"
 #: ../src/extension/internal/filter/transparency.h:302
 #: ../src/extension/internal/filter/transparency.h:368
 msgid "Fill and Transparency"
-msgstr "Fyllnad och transparens"
+msgstr "Fyllning och transparens"
 
 #: ../build/share/filters/filters.svg.h:4
 msgid "Does not filter but adds a filter region"
@@ -44787,9 +44787,8 @@ msgid "Depth:"
 msgstr "Djup:"
 
 #: ../share/extensions/foldablebox.inx:8
-#, fuzzy
 msgid "Tab Proportion:"
-msgstr "Tab Proportion:"
+msgstr "Tabbproportion:"
 
 #: ../share/extensions/foldablebox.inx:16
 msgid "Add Guide Lines"
@@ -45103,54 +45102,44 @@ msgid "Major X Divisions:"
 msgstr "Större X-divisioner:"
 
 #: ../share/extensions/grid_cartesian.inx:16
-#, fuzzy
 msgid "Major X Division Spacing:"
-msgstr "Major X Division Avstånd:"
+msgstr "Avstånd för större X-division:"
 
 #: ../share/extensions/grid_cartesian.inx:17
-#, fuzzy
 msgid "Major X Division Spacing Unit:"
-msgstr "Major X Division Spacing Unit:"
+msgstr "Avståndsenhet för större X-division:"
 
 #: ../share/extensions/grid_cartesian.inx:23
-#, fuzzy
 msgid "Subdivisions per Major X Division:"
-msgstr "Indelningar per Major X Division:"
+msgstr "Indelningar per större X-division:"
 
 #
 # File: ../share/extensions/grid_cartesian.inx, line: 25
 #: ../share/extensions/grid_cartesian.inx:24
-#, fuzzy
 msgid "Logarithmic X Subdiv. (Base given by entry above)"
-msgstr "Logaritmisk X Underindelning (bas enligt ovanstående post)"
+msgstr "Logaritmisk X-underindelning (bas enligt ovanstående post)"
 
 #: ../share/extensions/grid_cartesian.inx:25
-#, fuzzy
 msgid "Subsubdivs. per X Subdivision:"
-msgstr "Underavdelningar. per X Underavdelning:"
+msgstr "Underindelningar per X-indelning:"
 
 #
 # File: ../share/extensions/grid_cartesian.inx, line: 27
 #: ../share/extensions/grid_cartesian.inx:26
-#, fuzzy
 msgid "Halve X Subsubdiv. Frequency after 'n' Subdivs. (log only):"
-msgstr ""
-"Halvera X Subsubdiv. Frekvens efter 'n' underindelningar. (endast log):"
+msgstr "Halvera X-underindelning Frekvens efter 'n' indelningar. (endast log):"
 
 #: ../share/extensions/grid_cartesian.inx:27
-#, fuzzy
 msgid "Major X Division Thickness:"
-msgstr "Major X Division Tjocklek:"
+msgstr "Tjocklek för större X-division:"
 
 #: ../share/extensions/grid_cartesian.inx:28
-#, fuzzy
 msgid "Minor X Division Thickness:"
-msgstr "Minor X Division Tjocklek:"
+msgstr "Tjocklek för mindre X-division:"
 
 #: ../share/extensions/grid_cartesian.inx:29
-#, fuzzy
 msgid "Subminor X Division Thickness:"
-msgstr "Subminor X Division Tjocklek:"
+msgstr "Tjocklek för subminor X-division:"
 
 #: ../share/extensions/grid_cartesian.inx:30
 msgid "X Division Thickness Unit:"
@@ -45189,10 +45178,8 @@ msgstr "Underindelningar per Y-indelning:"
 #
 # File: ../share/extensions/grid_cartesian.inx, line: 50
 #: ../share/extensions/grid_cartesian.inx:49
-#, fuzzy
 msgid "Halve Y Subsubdiv. Frequency after 'n' Subdivs. (log only):"
-msgstr ""
-"Halvera Y Subsubdiv. Frekvens efter 'n' underindelningar. (endast log):"
+msgstr "Halvera Y-underindelning Frekvens efter 'n' indelningar. (endast log):"
 
 #: ../share/extensions/grid_cartesian.inx:50
 msgid "Major Y Division Thickness:"
@@ -45235,19 +45222,16 @@ msgid "Subsubdivs per Subdivision:"
 msgstr "Underindelningar per indelning:"
 
 #: ../share/extensions/grid_isometric.inx:10
-#, fuzzy
 msgid "Major Division Thickness (px):"
-msgstr "Major Division Thickness (px):"
+msgstr "Tjocklek för större division (px):"
 
 #: ../share/extensions/grid_isometric.inx:11
-#, fuzzy
 msgid "Minor Division Thickness (px):"
-msgstr "Minor Division Tjocklek (px):"
+msgstr "Tjocklek för mindre division (px):"
 
 #: ../share/extensions/grid_isometric.inx:12
-#, fuzzy
 msgid "Subminor Division Thickness (px):"
-msgstr "Subminor Division Thickness (px):"
+msgstr "Tjocklek för subminor division (px):"
 
 #: ../share/extensions/grid_isometric.inx:13
 msgid "Border Thickness (px):"
@@ -47683,7 +47667,6 @@ msgstr ""
 "pensel."
 
 #: ../share/extensions/other/extension-xaml/inkxaml/svg2xaml.inx:25
-#, fuzzy
 msgid ""
 "For most texts, there is support for exporting as (editable) TextBlock / "
 "Span elements for WPF Canvas mode. Texts are always converted to path in "
@@ -47691,7 +47674,7 @@ msgid ""
 msgstr ""
 "För de flesta texter finns det stöd för att exportera som (redigerbara) "
 "TextBlock / Span-element för WPF Canvas-läge. Texter konverteras alltid till "
-"sökväg i DrawingGroup-läge eller när man riktar sig mot Avalonia."
+"slinga i DrawingGroup-läge eller när man riktar sig mot Avalonia."
 
 #: ../share/extensions/other/extension-xaml/inkxaml/svg2xaml.inx:30
 msgid "Export layers as separate top-level resources"
@@ -47829,9 +47812,8 @@ msgid "Area"
 msgstr "Område"
 
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:9
-#, fuzzy
 msgid "Maximum area cutting curves:"
-msgstr "Förenklar slingor:"
+msgstr "Maximala skärområdeskurvor:"
 
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:10
 msgid "Area width:"
@@ -47873,9 +47855,8 @@ msgid "Area fill angle"
 msgstr "Vinkel för områdesfyllning"
 
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:23
-#, fuzzy
 msgid "Area fill shift"
-msgstr "Väster vinkel"
+msgstr "Förskjutning för områdesfyllning"
 
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:24
 msgid "Filling method"
@@ -47886,9 +47867,8 @@ msgid "Zig zag"
 msgstr "Sicksack"
 
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:30
-#, fuzzy
 msgid "Area artifacts"
-msgstr "Artefakter i området"
+msgstr "Områdesartefakter"
 
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:31
 msgid "Artifact diameter:"
@@ -47907,7 +47887,6 @@ msgid "delete"
 msgstr "ta bort"
 
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:37
-#, fuzzy
 msgid ""
 "\n"
 "Usage:\n"
@@ -47920,9 +47899,9 @@ msgid ""
 msgstr ""
 "\n"
 "Användning:\n"
-"1. Välj alla Area Offsets (grå konturer)\n"
-"2. Objekt/Ungrupp (Skift+Ctrl+G)\n"
-"3. Tryck på Apply\n"
+"1. Välj alla Områdesförskjutningar (grå konturer)\n"
+"2. Objekt/Avgruppera (Skift+Ctrl+G)\n"
+"3. Tryck på Tillämpa\n"
 "\n"
 "Misstänkta små objekt kommer att markeras med färgade pilar.\n"
 "            "
@@ -47943,9 +47922,8 @@ msgstr "Biarc-interpolationstolerans:"
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:49
 #: ../share/extensions/other/gcodetools/gcodetools_lathe.inx:30
 #: ../share/extensions/other/gcodetools/gcodetools_path_to_gcode.inx:10
-#, fuzzy
 msgid "Maximum splitting depth:"
-msgstr "Förenklar slingor:"
+msgstr "Maximalt klyvdjup:"
 
 #: ../share/extensions/other/gcodetools/gcodetools_area.inx:50
 #: ../share/extensions/other/gcodetools/gcodetools_lathe.inx:31
@@ -48144,7 +48122,6 @@ msgstr "Snabb förpenetrering"
 #: ../share/extensions/other/gcodetools/gcodetools_graffiti.inx:82
 #: ../share/extensions/other/gcodetools/gcodetools_lathe.inx:75
 #: ../share/extensions/other/gcodetools/gcodetools_path_to_gcode.inx:55
-#, fuzzy
 msgid "Additional post-processor:"
 msgstr "Ytterligare efterbehandlare:"
 
@@ -48175,7 +48152,6 @@ msgid "DXF points"
 msgstr "DXF-punkter"
 
 #: ../share/extensions/other/gcodetools/gcodetools_dxf_points.inx:9
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -48189,12 +48165,12 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Konvertera valda objekt till borrpunkter (som plugin-programmet dxf_import "
+"Konvertera valda objekt till borrpunkter (som insticksprogrammet dxf_import "
 "gör). Du kan också spara originalformen. Endast startpunkten för varje kurva "
 "kommer att användas.\n"
 "\n"
-"Du kan också manuellt välja objekt, öppna XML-redigeraren (Shift+Ctrl+X) och "
-"lägga till eller ta bort XML-taggen 'dxfpoint' med valfritt värde.\n"
+"Du kan också manuellt välja objekt, öppna XML-redigeraren (Skift+Ctrl+X) och "
+"lägg till eller ta bort XML-taggen 'dxfpoint' med valfritt värde.\n"
 "          "
 
 #: ../share/extensions/other/gcodetools/gcodetools_dxf_points.inx:15
@@ -48394,14 +48370,12 @@ msgid "Offset path"
 msgstr "Förskjut slinga"
 
 #: ../share/extensions/other/gcodetools/gcodetools_lathe.inx:16
-#, fuzzy
 msgid "Lathe X axis remap:"
-msgstr "Svarv X-axel remap:"
+msgstr "Ommappning av svarvens X-axel:"
 
 #: ../share/extensions/other/gcodetools/gcodetools_lathe.inx:17
-#, fuzzy
 msgid "Lathe Z axis remap:"
-msgstr "Svarv Z-axel remap:"
+msgstr "Ommappning av svarvens Z-axel:"
 
 #: ../share/extensions/other/gcodetools/gcodetools_lathe.inx:20
 msgid "Lathe modify path"
@@ -48424,7 +48398,6 @@ msgid "Orientation Points"
 msgstr "Orienteringspunkter"
 
 #: ../share/extensions/other/gcodetools/gcodetools_orientation_points.inx:24
-#, fuzzy
 msgid ""
 "\n"
 "Orientation points are used to calculate transformation "
@@ -48441,8 +48414,8 @@ msgid ""
 "      "
 msgstr ""
 "\n"
-"Orienteringspunkterna används för att beräkna banans transformation (offset, "
-"skala, spegel, rotation i XY-planet).\n"
+"Orienteringspunkterna används för att beräkna slingans transformation "
+"(förskjutning, skala, spegling, rotation i XY-planet).\n"
 "endast 3-punktsläge: lägg inte alla tre i en linje (använd istället 2-"
 "punktsläge).\n"
 "Du kan ändra värdena för Z-yta och Z-djup senare med hjälp av textverktyget "
@@ -48451,7 +48424,7 @@ msgstr ""
 "från det övre lagret.\n"
 "Avgruppera inte orienteringspunkterna!\n"
 "Du kan välja dem genom att dubbelklicka för att gå in i gruppen eller genom "
-"Ctrl+Click. Tryck nu på apply för att skapa kontrollpunkter (oberoende "
+"Ctrl+klicka. Tryck nu på Tillämpa för att skapa kontrollpunkter (oberoende "
 "uppsättning för varje lager).\n"
 "      "
 
@@ -48595,7 +48568,6 @@ msgid "Just check tools"
 msgstr "Bara kontrollera verktygen"
 
 #: ../share/extensions/other/gcodetools/gcodetools_tools_library.inx:24
-#, fuzzy
 msgid ""
 "\n"
 "Selected tool type fills appropriate default values. You can change these "
@@ -48614,7 +48586,7 @@ msgstr ""
 "Det översta (z-ordning) verktyget i det aktiva lagret används. Om det inte "
 "finns något verktyg i det aktuella lagret hämtas det från det övre lagret.\n"
 "\n"
-"Tryck på Apply för att skapa ett nytt verktyg.\n"
+"Tryck på Tillämpa för att skapa ett nytt verktyg.\n"
 "            "
 
 #: ../share/extensions/other/gcodetools/gcodetools_tools_library.inx:34
