--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: proxmox translations\n"
 "Report-Msgid-Bugs-To: <support@proxmox.com>\n"
 "POT-Creation-Date: 2025-06-04 19:10+0200\n"
-"PO-Revision-Date: 2025-07-06 11:45+0200\n"
+"PO-Revision-Date: 2025-07-06 11:51+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv\n"
@@ -1132,7 +1132,7 @@ msgstr "Säkerhetskopiering/återställning"
 #: pve-manager/www/manager6/storage/Browser.js:65
 #: proxmox-backup/www/dashboard/TaskSummary.js:29
 msgid "Backups"
-msgstr "Backup"
+msgstr "Säkerhetskopior"
 
 #: proxmox-backup/www/datastore/DataStoreListSummary.js:199
 #: proxmox-backup/www/datastore/Summary.js:201
@@ -6053,7 +6053,7 @@ msgstr "Logga in"
 
 #: proxmox-backup/www/Utils.js:419
 msgid "Log Rotation"
-msgstr "Log Rotation"
+msgstr "Loggrotation"
 
 #: pve-manager/www/manager6/window/FirewallLograteEdit.js:51
 msgid "Log burst limit"
@@ -11617,7 +11617,7 @@ msgstr "Uppgiftsresultat"
 #: proxmox-backup/www/dashboard/TaskSummary.js:5
 #: proxmox-backup/www/datastore/DataStoreListSummary.js:246
 msgid "Task Summary"
-msgstr "Arbetssammanfattning"
+msgstr "Uppgiftssammandrag"
 
 #: proxmox-widget-toolkit/src/node/Tasks.js:335
 msgid "Task Type"
@@ -12965,7 +12965,7 @@ msgstr "Endast verifierad"
 #: proxmox-backup/www/datastore/Content.js:1369
 #: proxmox-backup/www/window/VerifyAll.js:14
 msgid "Verify"
-msgstr "Verifiera"
+msgstr "Verifiering"
 
 #: proxmox-backup/www/datastore/Content.js:996
 msgid "Verify '{0}'"
@@ -13394,7 +13394,7 @@ msgid ""
 "With this feature, you can manually bypass spam checking for certain domains "
 "or E-mail addresses."
 msgstr ""
-"Med den här funktionen kan du manuellt kringgå spamkontroll för vissa "
+"Med den här funktionen kan du manuellt kringgå skräppostkontroll för vissa "
 "domäner eller e-postadresser."
 
 #: pmg-gui/js/UserBlackWhiteList.js:228
