--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -13141,7 +13141,7 @@ msgstr "Virus"
 
 #: pmg-gui/js/NavigationTree.js:166 pmg-gui/js/VirusCharts.js:5
 msgid "Virus Charts"
-msgstr "Virus-diagram"
+msgstr "Virusdiagram"
 
 #: pmg-gui/js/NavigationTree.js:66 pmg-gui/js/VirusDetectorConfiguration.js:6
 msgid "Virus Detector"
