--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -9206,7 +9206,7 @@ msgstr "Avvisa okända avsändare"
 
 #: pmg-gui/js/RBLStatistics.js:16
 msgid "Rejects"
-msgstr "Avvisar"
+msgstr "Avvisningar"
 
 #: pmg-gui/js/RelayDomains.js:12 pmg-gui/js/RelayDomains.js:78
 #: pmg-gui/js/Transport.js:87 pmg-gui/js/Transport.js:156
@@ -10801,7 +10801,7 @@ msgstr "Standard VGA"
 #: pve-manager/www/manager6/qemu/CmdMenu.js:58
 #: pve-manager/www/manager6/qemu/Config.js:58
 msgid "Start"
-msgstr "Starta"
+msgstr "Start"
 
 #: pve-manager/www/manager6/sdn/SubnetEdit.js:189
 msgid "Start Address"
