--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: proxmox translations\n"
 "Report-Msgid-Bugs-To: <support@proxmox.com>\n"
 "POT-Creation-Date: 2025-06-04 19:10+0200\n"
-"PO-Revision-Date: 2025-07-06 11:51+0200\n"
+"PO-Revision-Date: 2025-07-06 12:13+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv\n"
@@ -1621,7 +1621,7 @@ msgstr "Certifikat"
 
 #: proxmox-widget-toolkit/src/panel/ACMEPlugin.js:5
 msgid "Challenge Plugins"
-msgstr "Plugins för utmaningar"
+msgstr "Tillägg för utmaningar"
 
 #: proxmox-widget-toolkit/src/window/ACMEDomains.js:101
 #: pve-manager/www/manager6/node/ACME.js:297
@@ -6276,7 +6276,7 @@ msgstr "Mappade resurser ({0}) är inte tillgängliga på det valda målet."
 
 #: pve-manager/www/manager6/qemu/VirtiofsEdit.js:35
 msgid "Mapping ID"
-msgstr "Kartläggnings-ID"
+msgstr "Mappnings-ID"
 
 #: pve-manager/www/manager6/form/PCIMapSelector.js:52
 #: pve-manager/www/manager6/form/USBMapSelector.js:37
@@ -7220,7 +7220,7 @@ msgstr "Ingen LDAP/AD-realm hittades"
 
 #: pve-manager/www/manager6/tree/ResourceMapTree.js:8
 msgid "No Mapping found"
-msgstr "Ingen kartläggning hittades"
+msgstr "Ingen mappning hittades"
 
 #: proxmox-backup/www/DirectoryList.js:8
 msgid "No Mount-Units found"
@@ -7241,7 +7241,7 @@ msgstr "Inga åsidosättningar"
 
 #: proxmox-widget-toolkit/src/panel/ACMEPlugin.js:47
 msgid "No Plugins configured"
-msgstr "Inga plugins konfigurerade"
+msgstr "Inga tillägg konfigurerade"
 
 #: pve-manager/www/manager6/dc/OptionView.js:511
 msgid "No Registered Tags"
