--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: proxmox translations\n"
 "Report-Msgid-Bugs-To: <support@proxmox.com>\n"
 "POT-Creation-Date: 2025-06-04 19:10+0200\n"
-"PO-Revision-Date: 2025-07-06 12:13+0200\n"
+"PO-Revision-Date: 2025-07-06 16:24+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv\n"
@@ -515,7 +515,7 @@ msgstr "Administratör"
 
 #: pmg-gui/js/SystemOptions.js:79
 msgid "Administrator EMail"
-msgstr "Administratör EMail"
+msgstr "Administratörens e-post"
 
 #: proxmox-widget-toolkit/src/window/Edit.js:366
 #: pve-manager/www/manager6/dc/Backup.js:497
@@ -583,11 +583,11 @@ msgstr "Allt OK"
 
 #: proxmox-backup/www/datastore/Content.js:1171
 msgid "All OK (old)"
-msgstr "Allt OK (gamla)"
+msgstr "Allt OK (gammal)"
 
 #: proxmox-widget-toolkit/src/node/APTRepositories.js:441
 msgid "All OK, you have production-ready repositories configured!"
-msgstr "Allt OK. Nu har du konfigurerat produktionsfärdiga arkiv!"
+msgstr "Allt OK. Nu har du produktionsfärdiga arkiv konfigurerade!"
 
 #: proxmox-backup/www/datastore/OptionView.js:17
 msgid "All backup snapshots and their data will be permanently destroyed!"
@@ -756,7 +756,7 @@ msgstr "Är du säker på att du vill ta bort prenumerationsnyckeln?"
 #: pve-manager/www/manager6/lxc/Resources.js:244
 #: pve-manager/www/manager6/qemu/HardwareView.js:499
 msgid "Are you sure you want to detach entry {0}"
-msgstr "Är du säker på att du vill koppla loss posten {0}"
+msgstr "Är du säker på att du vill koppla från posten {0}"
 
 #: pmg-gui/js/PBSSnapshotView.js:224
 msgid "Are you sure you want to forget snapshot {0}"
@@ -801,7 +801,7 @@ msgstr "Är du säker på att du vill ta bort posten {0}"
 
 #: proxmox-backup/www/datastore/Content.js:640
 msgid "Are you sure you want to remove snapshot {0}"
-msgstr "Är du säker på att du vill ta bort snapshot {0}"
+msgstr "Är du säker på att du vill ta bort ögonblicksbilden {0}"
 
 #: proxmox-backup/www/tape/window/MediaRemoveWindow.js:12
 msgid "Are you sure you want to remove tape '{0}' ?"
@@ -1026,7 +1026,7 @@ msgstr "Bakgrund"
 #: proxmox-backup/www/window/DataStoreEdit.js:62
 #: proxmox-backup/www/window/DataStoreEdit.js:119
 msgid "Backing Path"
-msgstr "Backing Path"
+msgstr "Bakre sökväg"
 
 #: pmg-gui/js/SpamDetectorOptions.js:41
 msgid "Backscatter Score"
@@ -1073,11 +1073,11 @@ msgstr "Säkerhetskopieringsjobb"
 
 #: proxmox-backup/www/tape/TapeManagement.js:55
 msgid "Backup Jobs"
-msgstr "Jobb inom säkerhetskopiering"
+msgstr "Säkerhetskopieringsjobb"
 
 #: pve-manager/www/manager6/dc/Backup.js:471
 msgid "Backup Notes"
-msgstr "Anteckningar om säkerhetskopiering"
+msgstr "Anteckningar för säkerhetskopia"
 
 #: pmg-gui/js/BackupRestore.js:136 pmg-gui/js/PBSSnapshotView.js:200
 msgid "Backup Now"
@@ -1155,7 +1155,7 @@ msgstr "Bandbredd"
 #: pve-manager/www/manager6/panel/BackupAdvancedOptions.js:139
 #: pve-manager/www/manager6/window/Restore.js:207
 msgid "Bandwidth Limit"
-msgstr "Begränsning av bandbredd"
+msgstr "Bandbreddsbegränsning"
 
 #: pve-manager/www/manager6/dc/OptionView.js:276
 msgid "Bandwidth Limits"
@@ -1168,7 +1168,7 @@ msgstr "Streckkodsetikett"
 
 #: proxmox-backup/www/Utils.js:405
 msgid "Barcode-Label Media"
-msgstr "Media för streckkodsetiketter"
+msgstr "Streckkodsetikett för media"
 
 #: pmg-gui/js/LDAPConfig.js:130
 msgid "Base DN"
@@ -1185,11 +1185,11 @@ msgstr "Bas Domännamn"
 
 #: pve-manager/www/manager6/storage/LVMEdit.js:152
 msgid "Base storage"
-msgstr "Grundlagring"
+msgstr "Baslagring"
 
 #: pve-manager/www/manager6/storage/LVMEdit.js:180
 msgid "Base volume"
-msgstr "Grundvolym"
+msgstr "Basvolym"
 
 #: pve-manager/www/manager6/Utils.js:31
 msgid "Basic"
@@ -1206,7 +1206,7 @@ msgstr "Före köfiltrering"
 
 #: proxmox-widget-toolkit/src/window/AuthEditLDAP.js:130
 msgid "Bind Domain Name"
-msgstr "Binda domännamn"
+msgstr "Bind domännamn"
 
 #: proxmox-widget-toolkit/src/window/AuthEditLDAP.js:148
 #: pve-manager/www/manager6/dc/AuthEditLDAP.js:240
@@ -1215,7 +1215,7 @@ msgstr "Bind lösenord"
 
 #: pve-manager/www/manager6/dc/AuthEditLDAP.js:233
 msgid "Bind User"
-msgstr "Binda användare"
+msgstr "Bind användare"
 
 #: pmg-gui/js/QuarantineView.js:29 pmg-gui/js/SpamContextMenu.js:25
 #: pmg-gui/js/SpamQuarantine.js:261 pmg-gui/js/UserBlackWhiteList.js:54
@@ -1226,7 +1226,7 @@ msgstr "Svartlista"
 
 #: proxmox-widget-toolkit/src/Schema.js:89
 msgid "Block Device"
-msgstr "Blockera enhet"
+msgstr "Blockenhet"
 
 #: pve-manager/www/manager6/storage/ZFSEdit.js:68
 #: pve-manager/www/manager6/storage/ZFSPoolEdit.js:107
@@ -1256,7 +1256,7 @@ msgstr "Startläge"
 #: pve-manager/www/manager6/qemu/BootOrderEdit.js:263
 #: pve-manager/www/manager6/qemu/Options.js:89
 msgid "Boot Order"
-msgstr "Beställning av kängor"
+msgstr "Uppstartsordning"
 
 #: pve-manager/www/manager6/panel/GuestStatusView.js:130
 #: pve-manager/www/manager6/panel/TemplateStatusView.js:60
@@ -1276,7 +1276,7 @@ msgstr "Studsar"
 #: pve-manager/www/manager6/qemu/NetworkEdit.js:81
 #: pve-manager/www/manager6/window/GuestImport.js:868
 msgid "Bridge"
-msgstr "Bridge"
+msgstr "Brygga"
 
 #: proxmox-widget-toolkit/src/node/NetworkEdit.js:113
 #: proxmox-widget-toolkit/src/node/NetworkEdit.js:126
@@ -1349,21 +1349,21 @@ msgstr "Massmigrera virtuella maskiner och containrar"
 
 #: pve-manager/www/manager6/Utils.js:2073
 msgid "Bulk shutdown VMs and Containers"
-msgstr "Bulkavstängning av virtuella maskiner och containrar"
+msgstr "Massavstängning av virtuella maskiner och containrar"
 
 #: pve-manager/www/manager6/Utils.js:2072
 msgid "Bulk start VMs and Containers"
-msgstr "Bulkstarta virtuella maskiner och containrar"
+msgstr "Masstarta virtuella maskiner och containrar"
 
 #: proxmox-backup/www/config/TrafficControlView.js:159
 #: proxmox-backup/www/window/TrafficControlEdit.js:263
 msgid "Burst In"
-msgstr "Störta in"
+msgstr "Burst In"
 
 #: proxmox-backup/www/config/TrafficControlView.js:166
 #: proxmox-backup/www/window/TrafficControlEdit.js:270
 msgid "Burst Out"
-msgstr "Störta ut"
+msgstr "Burst Out"
 
 #: pve-manager/www/manager6/form/ControllerSelector.js:65
 msgid "Bus/Device"
@@ -1390,8 +1390,8 @@ msgid ""
 "CD-ROM images cannot get imported, if required you can reconfigure the '{0}' "
 "drive in the 'Advanced' tab."
 msgstr ""
-"CD-ROM-bilder kan inte importeras, om så krävs kan du konfigurera om \"{0}\"-"
-"enheten under fliken \"Avancerat\"."
+"CD-ROM-avbildningar kan inte importeras, om så krävs kan du konfigurera om "
+"\"{0}\"-enheten under fliken \"Avancerat\"."
 
 #: pve-manager/www/manager6/qemu/HardwareView.js:234
 #: pve-manager/www/manager6/qemu/HardwareView.js:700
@@ -1525,7 +1525,8 @@ msgstr "Det går inte att ta bort diskavbildningen."
 
 #: pve-manager/www/manager6/storage/ImageView.js:48
 msgid "Cannot remove image, a guest with VMID '{0}' exists!"
-msgstr "Det går inte att ta bort bilden, det finns en gäst med VMID '{0}'!"
+msgstr ""
+"Det går inte att ta bort avbildningen, det finns en gäst med VMID '{0}'!"
 
 #: pve-manager/www/manager6/node/ZFS.js:53
 msgid "Cannot use reserved pool name"
@@ -1558,19 +1559,19 @@ msgstr "Katalog"
 
 #: proxmox-backup/www/Utils.js:406
 msgid "Catalog Media"
-msgstr "Katalog Media"
+msgstr "Katalogmedia"
 
 #: pmg-gui/js/ObjectGroup.js:318
 msgid ""
 "Caution: 'What Objects' match each mail part separately, so be careful with "
 "any option besides 'Any matches'."
 msgstr ""
-"Varning: \"What Objects\" matchar varje postdel separat, så var försiktig "
-"med andra alternativ än \"Any matches\"."
+"Varning: \"Objekt “för Vad” matchar varje e-postdel separat, så var "
+"försiktig med andra alternativ än “Alla matchningar\"."
 
 #: pve-manager/www/manager6/ceph/Pool.js:262
 msgid "Ceph Pool"
-msgstr "Ceph Pool"
+msgstr "Ceph-pool"
 
 #: pve-manager/www/manager6/ceph/Status.js:63
 msgid "Ceph Version"
@@ -1626,7 +1627,7 @@ msgstr "Tillägg för utmaningar"
 #: proxmox-widget-toolkit/src/window/ACMEDomains.js:101
 #: pve-manager/www/manager6/node/ACME.js:297
 msgid "Challenge Type"
-msgstr "Typ av utmaning"
+msgstr "Utmaningstyp"
 
 #: proxmox-backup/www/window/BackupGroupChangeOwner.js:7
 #: proxmox-backup/www/window/BackupGroupChangeOwner.js:26
@@ -1635,13 +1636,13 @@ msgstr "Byt ägare"
 
 #: proxmox-backup/www/config/UserView.js:175
 msgid "Change Password"
-msgstr "Ändra lösenord"
+msgstr "Byt lösenord"
 
 #: pve-manager/www/manager6/grid/BackupView.js:302
 #: pve-manager/www/manager6/storage/BackupView.js:178
 #: proxmox-backup/www/datastore/Content.js:1378
 msgid "Change Protection"
-msgstr "Förändring Skydd"
+msgstr "Ändra skydd"
 
 #: pve-manager/www/manager6/Utils.js:2028
 msgid "Change global Ceph flags"
@@ -1668,11 +1669,11 @@ msgstr "Ändringslogg"
 #: proxmox-backup/www/tape/window/ChangerEdit.js:8
 #: proxmox-backup/www/tape/window/DriveEdit.js:34
 msgid "Changer"
-msgstr "Bytare"
+msgstr "Ändrare"
 
 #: proxmox-backup/www/tape/TapeManagement.js:30
 msgid "Changers"
-msgstr "Förändrare"
+msgstr "Ändrare"
 
 #: pve-manager/www/manager6/dc/OptionView.js:273
 msgid "Changing the ID breaks existing WebAuthn TFA entries."
@@ -1681,7 +1682,7 @@ msgstr "Om du ändrar ID bryts befintliga WebAuthn TFA-poster."
 #: pmg-gui/js/TFAView.js:82 proxmox-backup/www/config/WebauthnView.js:131
 msgid "Changing the Relying Party may break existing webAuthn TFA entries."
 msgstr ""
-"Att ändra den återbetalande parten kan bryta befintliga webAuthn TFA-poster."
+"Att ändra den förlitande parten kan bryta befintliga webAuthn TFA-poster."
 
 #: pmg-gui/js/SpamDetectorStatus.js:22
 msgid "Channel"
@@ -1700,7 +1701,7 @@ msgstr "Kontrollera"
 #: pve-manager/www/manager6/dc/AuthEditAD.js:93
 #: pve-manager/www/manager6/dc/AuthEditLDAP.js:93
 msgid "Check connection"
-msgstr "Kontrollera anslutningen"
+msgstr "Kontrollera anslutning"
 
 #: pve-manager/www/manager6/window/DownloadUrlToStorage.js:204
 #: pve-manager/www/manager6/window/UploadToStorage.js:242
@@ -1736,11 +1737,11 @@ msgstr ""
 
 #: proxmox-backup/www/datastore/OptionView.js:261
 msgid "Chunk Iteration Order"
-msgstr "Chunk Iteration Order"
+msgstr "Ordning för chunk iteration"
 
 #: proxmox-backup/www/Utils.js:845
 msgid "Chunk Order"
-msgstr "Chunk Beställning"
+msgstr "Chunk-ordning"
 
 #: pve-manager/www/manager6/UIOptions.js:72
 #: pve-manager/www/manager6/UIOptions.js:74
@@ -1761,20 +1762,20 @@ msgstr "Klass"
 
 #: pve-manager/www/manager6/ceph/StatusDetail.js:192
 msgid "Clean"
-msgstr "Ren"
+msgstr "Städa"
 
 #: proxmox-backup/www/tape/ChangerStatus.js:823
 msgid "Clean Drive"
-msgstr "Ren enhet"
+msgstr "Städa enhet"
 
 #: proxmox-backup/www/Utils.js:710
 msgid "Cleaning"
-msgstr "Rengörning"
+msgstr "Städar"
 
 #: pve-manager/www/manager6/ceph/OSD.js:179
 #: pve-manager/www/manager6/window/SafeDestroyStorage.js:15
 msgid "Cleanup Disks"
-msgstr "Rensning av diskar"
+msgstr "Städa upp diskar"
 
 #: pve-manager/www/manager6/window/SafeDestroyStorage.js:26
 msgid "Cleanup Storage Configuration"
@@ -1783,20 +1784,20 @@ msgstr "Städa upp lagringskonfiguration"
 #: proxmox-widget-toolkit/src/node/Tasks.js:189
 #: proxmox-widget-toolkit/src/node/Tasks.js:243
 msgid "Clear Filter"
-msgstr "Rensa filter"
+msgstr "Töm filter"
 
 #: pve-manager/www/manager6/window/BulkAction.js:422
 msgid "Clear Filters"
-msgstr "Rensa filter"
+msgstr "Töm filter"
 
 #: proxmox-backup/www/tape/TapeInventory.js:156
 #: proxmox-backup/www/tape/TapeInventory.js:158
 msgid "Clear Status"
-msgstr "Klar status"
+msgstr "Töm status"
 
 #: pmg-gui/js/MailTracker.js:418
 msgid "Client"
-msgstr "Kund"
+msgstr "Klient"
 
 #: pmg-gui/js/MailProxyOptions.js:80
 msgid "Client Connection Count Limit"
@@ -1804,12 +1805,12 @@ msgstr "Begränsning av antalet klientanslutningar"
 
 #: pmg-gui/js/MailProxyOptions.js:86
 msgid "Client Connection Rate Limit"
-msgstr "Begränsning av anslutningshastighet för klient"
+msgstr "Begränsning av anslutningsfrekvens för klient"
 
 #: proxmox-widget-toolkit/src/window/AuthEditOpenId.js:57
 #: pve-manager/www/manager6/dc/AuthEditOpenId.js:31
 msgid "Client ID"
-msgstr "Klient ID"
+msgstr "Klient-id"
 
 #: proxmox-widget-toolkit/src/window/AuthEditOpenId.js:63
 #: pve-manager/www/manager6/dc/AuthEditOpenId.js:37
@@ -1818,7 +1819,7 @@ msgstr "Klientnyckel"
 
 #: pmg-gui/js/MailProxyOptions.js:91
 msgid "Client Message Rate Limit"
-msgstr "Begränsning av hastighet för klientmeddelanden"
+msgstr "Begränsning av frekvens för klientmeddelanden"
 
 #: pve-manager/www/manager6/qemu/DisplayEdit.js:84
 msgid "Clipboard"
@@ -1848,7 +1849,7 @@ msgstr "Stäng"
 #: pve-manager/www/manager6/qemu/HardwareView.js:235
 #: pve-manager/www/manager6/qemu/HardwareView.js:742
 msgid "CloudInit Drive"
-msgstr "CloudInit Drive"
+msgstr "CloudInit-enhet"
 
 #: pmg-gui/js/NavigationTree.js:78
 #: pve-manager/www/manager6/dc/ClusterEdit.js:12
@@ -1879,7 +1880,7 @@ msgstr "Information om klusteranslutning"
 #: pve-manager/www/manager6/dc/Cluster.js:181
 #: pve-manager/www/manager6/dc/ClusterEdit.js:21
 msgid "Cluster Name"
-msgstr "Klustrets namn"
+msgstr "Klusternamn"
 
 #: pve-manager/www/manager6/dc/ClusterEdit.js:28
 #: pve-manager/www/manager6/dc/ClusterEdit.js:368
@@ -1910,8 +1911,8 @@ msgstr ""
 msgid ""
 "Cluster join task finished, node certificate may have changed, reload GUI!"
 msgstr ""
-"Klusteranslutningsuppgift slutförd, nodcertifikatet kan ha ändrats, ladda om "
-"GUI!"
+"Klusteranslutningsuppgift slutförd, nodcertifikatet kan ha ändrats, läs om "
+"gränssnittet!"
 
 #: pve-manager/www/manager6/panel/StatusPanel.js:39
 msgid "Cluster log"
@@ -2091,7 +2092,7 @@ msgstr "Konfigurationsdatabas"
 
 #: proxmox-widget-toolkit/src/Utils.js:1320
 msgid "Configuration Unsupported"
-msgstr "Konfiguration stöds inte"
+msgstr "Konfigurationen stöds inte"
 
 #: proxmox-backup/www/datastore/OptionView.js:18
 msgid "Configuration change only, no data will be deleted."
@@ -2170,7 +2171,7 @@ msgstr "Bekräfta lösenord"
 #: proxmox-widget-toolkit/src/window/AddYubico.js:120
 #: proxmox-widget-toolkit/src/window/TfaEdit.js:224
 msgid "Confirm your ({0}) password"
-msgstr "Bekräfta ditt ({0}) lösenord"
+msgstr "Bekräfta ditt ({0})-lösenord"
 
 #: proxmox-backup/www/window/DatastoreRepoInfo.js:6
 msgid "Connection Information"
@@ -2310,7 +2311,7 @@ msgstr "Kopiera nyckel"
 
 #: proxmox-widget-toolkit/src/window/AddTfaRecovery.js:184
 msgid "Copy Recovery Keys"
-msgstr "Nycklar för återställning av kopior"
+msgstr "Kopiera nycklar för återställning"
 
 #: pve-manager/www/manager6/dc/TokenEdit.js:163
 #: proxmox-backup/www/window/TokenEdit.js:213
@@ -3042,7 +3043,7 @@ msgstr "Enhets ID"
 
 #: proxmox-widget-toolkit/src/Utils.js:1321
 msgid "Device Ineligible"
-msgstr ""
+msgstr "Enheten inte kvalificerad"
 
 #: pve-manager/www/manager6/lxc/Resources.js:398
 msgid "Device Passthrough"
@@ -7487,7 +7488,7 @@ msgstr "Nod"
 
 #: pve-manager/www/manager6/Utils.js:2109
 msgid "Node fencing notifications"
-msgstr ""
+msgstr "Notifieringar om nodisolering"
 
 #: pve-manager/www/manager6/dc/Backup.js:634
 msgid "Node is offline"
